--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,29 @@
-<h1>Franco <%= name%> Soy el mejor del mundo</h1>
-<form action="/logout?_method=DELETE" method="POST">
-    <button type="submit">Log Out</button>
-</form>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Cuanta</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <br />
+    <br />
+    <div class="container">
+      <h1>Bienvenido <%= name%>!, Esta es tu cuenta de JC</h1>
+      <form action="/logout?_method=DELETE" method="POST">
+        <button class="btn btn-outline-danger" type="submit">Log Out</button>
+      </form>
+    </div>
+  </body>
+</html>
