--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,17 +1,48 @@
-<h1>Login ( Acceso )</h1>
-
-<% if (messages.error) {%>
-    <%= messages.error %>
-<% }%>
-<form action="/login" method="POST">
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Login JC</title>
+    <link rel="shortcut icon" href="img/icon.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./css/login.css" />
+  </head>
+  <body>
+    <br/>
+    <br/>
+    <div class="container">
+      <% if (messages.error) {%> <%= messages.error %> <% }%>
+      <form action="/login" method="POST">
+        <h1 class="text-primary">Login Example</h1>
+        <div class="mb-3">
+          <label class="form-label" for="email">Email</label>
+          <input class="form-control" type="email" id="email" name="email" required />
+        </div>
+        <div class="mb-3">
+          <label for="password">Password</label>
+          <input class="form-control" type="password" id="password" name="password" required />
+        </div>
+        <button class="btn btn-primary" type="submit">Login</button>
+      </form>
+      <div class="form-text">
+        <p>Estas registrado?<a href="/register">Regístrate</a></p>
+      </div>
     </div>
-    <div>
-        <label for="password">Password</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Login</button>
-</form>
-<a href="/register">Registro</a>
+  </body>
+</html>
