--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,17 +1,39 @@
-<h1>Registro</h1>
-<form action="/register" method="POST">
-    <div>
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name" required>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Registro</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+    <br>
+    <br>
+    <div class="container">
+      <h1 class="text-primary">Sign In (Escribí un ejemplo)</h1>
+      <form class="formulario" action="/register" method="POST">
+        <div class="mb-3">
+          <label for="name">Nombre</label>
+          <input class="form-control" type="text" id="name" name="name" required />
+        </div>
+        <div class="mb-3">
+          <label for="email">Email</label>
+          <input class="form-control" type="email" id="email" name="email" required />
+        </div>
+        <div class="mb-3">
+          <label for="password">Contraseña</label>
+          <input class="form-control" type="password" id="password" name="password" required />
+        </div>
+        <button class="btn btn-primary" type="submit">Registrar</button>
+      </form>
+      <div class="form-text">
+        <p>Ir a <a href="/login">login</a></p>
+      </div>
     </div>
-    <div>
-        <label for="email">Email</label>
-        <input type="email" id="email" name="email" required>
-    </div>
-    <div>
-        <label for="password">Contrasña</label>
-        <input type="password" id="password" name="password" required>
-    </div>
-    <button type="submit">Registrar</button>
-</form>
-<a href="/login">login</a>
+  </body>
+</html>
